# waxNFTdispatcher

./: .gitignore  LICENSE  README.md  main.py  nft_hopper.py  pyproject.toml  sendoutnft.py  waxNFTdispatcher.py
.devcontainer/: devcontainer.json
waxNFTdispatcher/: waxNFTdispatcher.py
waxnftdispatcher/: __init__.py  waxNFTdispatcher.py
