[tool.poetry]
name = "NFT-hopper"
version = "0.1.1"
description = ""
authors = ["alparo <amparo.dios@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
loguru = "^0.6.0"
requests = "^2.28.1"
pyntelope = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
