[tool.poetry]
name = "waxNFTdispatcher"
version = "0.1.1"
description = ""
authors = ["Amparo Dios <amparo.dios@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0"
loguru = "^0.6.0"
requests = "^2.28.1"
pyntelope = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
