[tool.poetry]
name = "waxNFTdispatcher"
version = "0.3.03"
description = "This library will help you to transfer or to mint NFTs on the WAX blockchain"
authors = ["Amparo Dios <amparo.dios@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/alparo/waxNFTdispatcher"
repository = "https://github.com/alparo/waxNFTdispatcher"

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0"
loguru = "^0.6.0"
requests = "^2.28.1"
pyntelope = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
